FIX : styling for nav items so that they can be seen on iOS

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -2,8 +2,8 @@
 
 .nav {
   width: auto;
-  display: flex;
-  flex-flow: row-reverse;
+  height: 10vh;
+  text-align: right;
   background-color: transparent;
   padding-left: $padding;
   padding-right: $padding;
